--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.1",
+    "@heroicons/react": "^1.0.4",
+    "@tailwindcss/forms": "^0.3.3",
     "next": "latest",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-avatar": "^3.10.0",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
