--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@tailwindcss/forms": "^0.3.3",
+    "lodash": "^4.17.21",
     "next": "latest",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-avatar": "^3.10.0",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
