--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@tailwindcss/forms": "^0.3.3",
+    "classnames": "^2.3.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "next": "latest",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
