--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@heroicons/react": "^1.0.4",
     "@tailwindcss/forms": "^0.3.3",
     "classnames": "^2.3.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "latest",
@@ -17,6 +18,7 @@
     "react": "^17.0.2",
     "react-avatar": "^3.10.0",
     "react-dom": "^17.0.2",
+    "react-input-mask": "^2.0.4",
     "swr": "^1.0.0"
   },
   "devDependencies": {
